--- a/card.css
+++ b/card.css
@@ -77,7 +77,7 @@ ul li{
     transform: rotateY(0deg);
     transform-origin: left;
     transition: transform 2s;
-    background: url(./download.jfif) no-repeat;
+    background: url(./image/download.jfif) no-repeat;
     background-size: cover;
     background-position-x: 0vh;
     border-radius: 18px 0 0 18px;
@@ -91,7 +91,7 @@ ul li{
         transform: rotateY(0deg);
         transform-origin: right;
         transition: transform 2s;
-        background:  url(./download.jfif) no-repeat;
+        background:  url(./image/download.jfif) no-repeat;
         background-size: cover;
         background-position-x: -33vh;
         border-radius: 0 18px 18px 0;
